--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "cookie-parser": "^1.4.6",
+    "@googlemaps/google-maps-services-js": "^3.3.28",
     "body-parser": "^1.20.0",
-    "morgan": "^1.10.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "sequelize": "^6.21.4"
   },
