--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
     "query-string": "^8.1.0",
