--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.28",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.36.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
